--- a/index.html
+++ b/index.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ashish's Portfolio</title>
+    <title>Resume</title>
+    <body>
+        <h1>Ashish Sreevatsav Nandigam</h1>
+        <img src="./Myphoto.jpg" height = "200" alt="photo of Ashish sreevatsav" />
+        <p><Summary>
+            A highly motivated and detail oriented professional with a Bachelor’s degree in Computer Science.<br/>
+            Skilled in software development, data analysis, and problem solving.<br/> Proficient in C, C++, HTML5, DSA, CSS, Javascript.
+        </Summary></p>
+        <hr/>
+        <h2>Education</h2>
+        <ul>
+            <li>Bachelor of Computer Science and Technology in SRM AP University(2022-2026)</li>
+            <li>Narayana Junior College(2020-2022)</li>
+        </ul>
+        <hr/>
+        <h2>Skills</h2>
+        <ul>
+            <li>Strong knowledge of HTML, CSS and JavaScript 🌟🌟🌟🌟🌟</li>
+            <li>C, C++, DSA 🌟🌟🌟🌟🌟</li>
+            <li>proficiency in speaking, interacting and group management 🌟🌟🌟🌟</li>
+        </ul>
+        <hr/>
+        <h2>Other</h2>
+        <a href="./Hobbies.html">Hobbies</a>
+        <a href="./Contact.html">Contact Me</a>
+        <footer>
+            <small>
+              Copyright © Ashish sreevatsav. All Rights Reserved.
+            </small>
+          </footer>
+    </body>
 </head>
-<body>
-    <h1>Ashish sreevatsav</h1>
-    <h2> I'm a web developer</h2>
-    <hr />
-    <h3><a href="../4.3 HTML Porfolio Project/public/2.4 Movie Ranking Project/index.html"> Movie Project</a></h3>
-    <img src= "assets/images/Movies.png" height="350" alt = "Prototype image of webpage">
-    <hr />
-    <h3><a href="../4.3 HTML Porfolio Project/assets/Birthday.png">Birthday Invite Project</a></h3>
-    <img src = "../4.3 HTML Porfolio Project/assets/images/Birthday.png" height="350" alt = "Prototype image of webpage">
-    <hr />
-    <a href="../4.3 HTML Porfolio Project/public/contact.html">Contact Me</a>
-    <a href="../4.1+Webpages/4.1 Webpages/public/about.html">More About Me</a>
-</body>
-
-</html>
